Split out Figshare section in DatasetView; add UI for updating a Figshare article
